syntax = "proto3";

package project.planton.provider.aws.awsdynamodb.v1;

import "project/planton/credential/awscredential/v1/spec.proto";
import "project/planton/provider/aws/awsdynamodb/v1/api.proto";
import "project/planton/shared/iac/pulumi/pulumi.proto";
import "project/planton/shared/iac.proto";
import "project/planton/shared/iac/terraform/terraform.proto";

// AwsDynamodbStackInput is the input envelope passed to IaC modules for provisioning.
message AwsDynamodbStackInput {
  project.planton.shared.IacProvisioner provisioner = 1;
  project.planton.shared.iac.pulumi.PulumiStackInfo pulumi = 2;
  project.planton.shared.iac.terraform.TerraformStackInfo terraform = 3;
  AwsDynamodb target = 4;
  project.planton.credential.awscredential.v1.AwsCredentialSpec provider_credential = 5;
}


